--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teabot",
   "author": "Alexey Bystrov <strikeentco@gmail.com>",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "TeaBot - a way to build interactive Telegram bots.",
   "engines": {
     "node": ">=0.12.0"
@@ -17,6 +17,10 @@
     "plugins"
   ],
   "main": "./main.js",
+  "files": [
+    "lib",
+    "main.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/strikeentco/teabot.git"
@@ -26,7 +30,7 @@
   },
   "dependencies": {
     "matcher": "^0.1.1",
-    "tg-yarl": "~1.1.2"
+    "tg-yarl": "~1.2.0"
   },
   "license": "MIT"
 }
